--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,6 +1,3 @@
-
-
-
 name: GitHub-Profile-3D-Contrib
 
 on:
@@ -14,15 +11,18 @@ jobs:
     name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v3
+
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
-          MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
-      - name: Commit & Push
+      
+      - name: Save Generated Files
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add -A .
-          git commit -m "generated"
-          git push
+          mkdir -p generated_files
+          cp -r profile-3d-contrib/* generated_files/
+      
+      - name: Archive Generated Files
+        uses: actions/upload-artifact@v3
+        with:
+          name: generated-files
+          path: generated_files/
