--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -12,8 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: yoshi389111/github-profile-3d-contrib@0.7.1
+      - name: Generate Profile
+        uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Usar o token padrão
           USERNAME: ${{ github.repository_owner }}
       
       - name: Save Generated Files
